Added new fonts from fontello and changed timings as per poll

--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/app.css" />
+        <link rel="stylesheet" href="css/icons/fontello.css" />
+        <!--[if IE 7]>
+            <link rel="stylesheet" href="css/icons/fontello-ie7.css" />
+        <![endif] -->
+
         <script src="js/custom.modernizr.js"></script>
         <script>var targetDate = new Date("Oct 29 2013 17:00")</script>
     </head>
     <body>
         <!--[if lte IE 8]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" rel="nofollow">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         <header id="header" class="feature">
@@ -33,8 +38,8 @@
                             <li><a href="http://www.thoughtworks.com" target="_blank">ThoughtWorks</a></li>
                         </ul>
                         <ul class="right">
-                            <li><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" target="_blank">Participate</a></li>
-                            <li><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank">Talk</a></li>
+                            <li><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" target="_blank" rel="nofollow">Participate</a></li>
+                            <li><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank" rel="nofollow">Talk</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#agenda">Agenda</a></li>
                             <li><a href="#location">Location</a></li>
@@ -85,7 +90,7 @@
             <div class="row actions">
                 <div class="large-5 columns">
                     <p>register to</p>
-                    <h4><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" id="participate" target="_blank">Participate</a></h4>
+                    <h4><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" id="participate" target="_blank" rel="nofollow">Participate</a></h4>
                     <p><small>&bull; free participation &amp; dinner</small></p>
                 </div>
                 <div class="large-2 columns">
@@ -94,8 +99,8 @@
                 </div>
                 <div class="large-5 columns">
                     <p>submit your</p>
-                    <h4><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank">Talk</a></h4>
-                    <p><small>&bull; talks must be technical in nature</small></p>
+                    <h4><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank" rel="nofollow">Talk</a></h4>
+                    <p><small>&bull; this is an open forum, any technical talks welcome</small></p>
                 </div>
             </div>
         </section>
@@ -103,19 +108,22 @@
         <section id="about" class="feature">
             <div class="row">
                 <div class="large-12 columns social">
-                    <a href="https://www.facebook.com/GeeknightChennai?viewer_id=100006569229519" target="_blank"><i class="foundicon-thumb-up"></i></a>
-                    <a href="https://www.facebook.com/groups/chennaigeeks/" target="_blank"><i class="foundicon-facebook"></i></a>
-                    <a href="https://twitter.com/intent/tweet?url=twchennai.github.io/geeknight&text=Whats+up&hashtags=geeknightchennai" target="_blank"><i class="foundicon-twitter"></i></a>
-                    <a href="#"><i class="foundicon-youtube"></i></a>
+                    <a rel="nofollow" href="https://www.facebook.com/GeeknightChennai?viewer_id=100006569229519" target="_blank" title="Like us on FaceBook"><i class="icon-like"></i></a>
+                    <a rel="nofollow" href="https://www.facebook.com/groups/chennaigeeks/" target="_blank"><i class="icon-facebook" title="FaceBook discussion group"></i></a>
+                    <a rel="nofollow" href="https://twitter.com/intent/tweet?url=twchennai.github.io/geeknight&text=Whats+up&hashtags=geeknightchennai" target="_blank" title="Tweet hashtag #geeknightchennai"><i class="icon-twitter"></i></a>
+                    <a rel="nofollow" href="mailto:geeknight.chennai@thoughtworks.com" title="Email us"><i class="icon-mail"></i></a>
+                    <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
                 </div>
             </div>
 
             <div class="row">
                 <div class="large-12 columns">
                     <blockquote>
-                        <h6>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. For any queries or suggestions, feel free to drop a mail to <code>geeknight.chennai at thoughtworks.com</code>, or use any of the above social media</h6>
+                        <p>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. To know more, pay a visit to the next Geek Night, or get in touch using any of the above social media.</p>
 
-                        <cite><code>Geek Night Volunteers</code></cite>
+                        <p>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</p>
+
+                        <cite>Geek Night Volunteers</cite>
                     </blockquote>
                 </div>
             </div>
@@ -129,41 +137,35 @@
 
             <div class="timings">
                 <div class="row">
-                    <div class="small-4 columns"><p>5.00 pm</p></div>
-                    <div class="small-8 columns"><p>Introduction</p></div>
+                    <div class="small-4 columns"><p>5.45 pm</p></div>
+                    <div class="small-8 columns"><p>Welcome note</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><p>5.30 pm</p></div>
+                    <div class="small-4 columns"><p>6.00 pm</p></div>
                     <div class="small-8 columns"><p>Session 1</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><p>6.15 pm</p></div>
+                    <div class="small-4 columns"><p>6.45 pm</p></div>
                     <div class="small-8 columns"><p>Session 2</p></div>
                 </div>
                 <div class="row">
-                    <div class="small-4 columns"><p>7.00 pm</p></div>
+                    <div class="small-4 columns"><p>7.30 pm</p></div>
                     <div class="small-8 columns"><p>Break</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><p>7.15 pm</p></div>
+                    <div class="small-4 columns"><p>7.45 pm</p></div>
                     <div class="small-8 columns"><p>Session 3</p></div>
                 </div>
                 <div class="row talk">
-                    <div class="small-4 columns"><p>8.00 pm</p></div>
-                    <div class="small-8 columns"><p>Session 4</p></div>
-                </div>
-                <div class="row talk">
-                    <div class="small-4 columns"><p>8.45 pm</p></div>
-                    <div class="small-8 columns"><p>Lightning Sessions</p></div>
+                    <div class="small-4 columns"><p>8.30 pm</p></div>
+                    <div class="small-8 columns"><p>Short Talks</p></div>
                 </div>
                 <div class="row">
                     <div class="small-4 columns"><p>9.00 pm</p></div>
-                    <div class="small-8 columns">
-                        <p>
-                            Networking &amp; Dinner <br class="show-for-small" />
-                            <small>(served free at our premises)</small>
-                        </p>
-                    </div>
+                    <div class="small-8 columns"><p>
+                        Networking &amp; Dinner <br />
+                        <small>(served free at our premises)</small>
+                    </p></div>
                 </div>
             </div>
         </section>
@@ -178,7 +180,7 @@
                         9th Floor, Phase 3 <br />
                         Ascendas International Tech Park <br />
                         Taramani, Chennai <br />
-                        <small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank">&laquo; Open in Google Maps &raquo;</a></small>
+                        <small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small>
                     </h6>
                 </div>
             </div>
@@ -190,11 +192,16 @@
             <div class="row">
                 <div class="large-12 columns">
                     <p><small>
-                        Geek Night Chennai sponsored by <label><a href="//thoughtworks.com">ThoughtWorks</a></label><br />
+                        Geek Night Chennai sponsored by
+                        <a rel="nofollow" target="_blank" href="//thoughtworks.com">ThoughtWorks</a><br />
                         Built with
-                        <label><a href="//html5boilerplate.com">HTML5 Boilerplate</a></label>,
-                        <label><a href="//foundation.zurb.com">Zurb Foundation</a></label> &amp;
-                        <label><a href="//leafletjs.com">Leaflet</a></label>
+                        <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
+                        <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a> &amp;
+                        <a rel="nofollow" target="_blank" href="//leafletjs.com">Leaflet</a>
+                        <br />
+                        Assets from <a rel="nofollow" target="_blank" href="//openstreetmap.org">OpenStreetMap</a>,
+                        <a rel="nofollow" target="_blank" href="//fontello.com">Fontello</a> &amp;
+                        <a rel="nofollow" target="_blank" href="//modernpictograms.com">Modern Pictograms</a>
                     </small></p>
                 </div>
             </div>
