Added archive area

--- a/index.html
+++ b/index.html
@@ -188,6 +188,37 @@
 
         <div id="map" class="hide"></div>
 
+        <section id="archive" class="feature">
+            <div class="row">
+                <h2>Previous Editions</h2>
+            </div>
+
+            <div class="row">
+                <div class="large-12 columns">
+                    <ul class="grid small-block-grid-2 large-block-grid-4">
+                        <li>
+                            <a href="./sep2013">
+                                <span class="version">3<sup>rd</sup> edition</span>
+                                <span class="date">Sep 2013</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./aug2013">
+                                <span class="version">2<sup>nd</sup> edition</span>
+                                <span class="date">Aug 2013</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./jul2013">
+                                <span class="version">1<sup>st</sup> edition</span>
+                                <span class="date">Jul 2013</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
         <footer id="footer" class="feature">
             <div class="row">
                 <div class="large-12 columns">
@@ -206,7 +237,6 @@
                 </div>
             </div>
         </footer>
-
 
         <script src="js/ticker.js"></script>
         <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
