Refactored layouts and added more images

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -7,19 +7,26 @@ agenda:
     name: Welcome Note
   -
     time: "6:00"
-    name: Session 1
+    name: "Session 1"
+    speaker: "(not yet decided)"
   -
     time: "6:45"
-    name: Session 2
+    name: 'Creating Parallax websites (<a href="//railsgirls.com/chennai">like this</a>) using Skrollr'
+    speaker: "Subhas Dandapani (RDX)"
+    profile: "//facebook.com/rdx.subhas"
+    image: "rdx.jpg"
   -
     time: "7:30"
     name: Break
   -
     time: "7:45"
-    name: Session 3
+    name: "Demystifying Apache Drill"
+    speaker: "Varadharajan M"
+    profile: "mailto:varadham@thoughtworks.com"
+    image: "varadha.jpg"
   -
     time: "8:30"
-    name: "Lightning Sessions"
+    name: "Lightning Talks"
   -
     time: "9:00"
     name: "Networking &amp; Dinner"
