--- a/generator/content/july2013.html
+++ b/generator/content/july2013.html
@@ -9,16 +9,20 @@ agenda:
     time: "5:45"
     name: "Realtime Analytics using R"
     speaker: "Bharani Subramanian"
+    profile: "mailto:bharanis@thoughtworks.com"
+    image: "bharani.jpg"
   -
     time: "6:15"
-    name: "Visualizing tournament scores using D3JS"
-    speaker: "Subhas Dandapani"
+    name: "Visualizing tournament scores using D3JS and underscore"
+    speaker: "Subhas Dandapani (RDX)"
     profile: "//facebook.com/rdx.subhas"
-    image: "subhas.jpg"
+    image: "rdx.jpg"
   -
     time: "6:45"
     name: "IntelliSense for your Intimidating Data"
     speaker: "Tamilvendan Sembiyan"
+    profile: "//twitter.com/tamizhvendan"
+    image: "tamizhvendan.jpg"
   -
     time: "7:15"
     name: Break
