Added resources for talks

--- a/generator/content/aug2013.html
+++ b/generator/content/aug2013.html
@@ -4,34 +4,35 @@ edition: 2
 agenda:
   -
     time: "5:30"
-    name: Welcome Note
+    title: Welcome Note
   -
     time: "5:45"
-    name: "NoSQL 101 - Use right database for a problem"
+    title: "NoSQL 101 - Use right database for a problem"
     speaker: "Yekkanti Kishore Kumar"
     profile: "//yekkans.com/"
     image: "yekkanti.jpg"
   -
     time: "6:15"
-    name: "Natural Language Processing - Python"
+    title: "Natural Language Processing - Python"
     speaker: "Prabu Palanisamy"
   -
     time: "6:45"
-    name: Break
+    title: Break
   -
     time: "7:00"
-    name: "3-D Printing"
+    title: "3-D Printing"
     speaker: "Surendranath Reddy"
   -
     time: "7:30"
-    name: "What can be done using 1 line of .Net code; Automation Tips and tricks"
+    title: "What can be done using 1 line of .Net code; Automation Tips and tricks"
     speaker: "Ashok"
   -
     time: "8:00"
-    name: "Neural Networks 101"
+    title: "Neural Networks 101"
     speaker: "Varadharajan"
+    profile: "mailto:varadham@thoughtworks.com"
     image: "varadha.jpg"
   -
     time: "9:00"
-    name: "Networking &amp; Dinner"
+    title: "Networking &amp; Dinner"
 ---
