--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -4,30 +4,39 @@ edition: 4
 agenda:
   -
     time: "5:45"
-    name: Welcome Note
+    title: Welcome Note
   -
     time: "6:00"
-    name: "Session 1"
+    title: "Session 1"
     speaker: "(not yet decided)"
   -
     time: "6:45"
-    name: 'Creating Parallax websites (<a href="//railsgirls.com/chennai">like this</a>) using Skrollr'
+    title: 'Creating Parallax websites using Skrollr'
     speaker: "Subhas Dandapani (RDX)"
     profile: "//facebook.com/rdx.subhas"
     image: "rdx.jpg"
+    resources:
+      -
+        title: "Example"
+        url: "//railsgirls.com/chennai"
   -
     time: "7:30"
-    name: Break
+    title: Break
   -
     time: "7:45"
-    name: "Demystifying Apache Drill"
+    title: "Demystifying Apache Drill"
     speaker: "Varadharajan M"
     profile: "mailto:varadham@thoughtworks.com"
     image: "varadha.jpg"
+    resources:
+      -
+        title: "Apache Drill"
+        url: "//incubator.apache.org/drill/"
   -
     time: "8:30"
-    name: "Lightning Talks"
+    title: "Lightning Talks"
   -
     time: "9:00"
-    name: "Networking &amp; Dinner"
+    title: "Networking &amp; Dinner"
+    subtitle: "(served free at our premises)"
 ---
