--- a/generator/content/july2013.html
+++ b/generator/content/july2013.html
@@ -4,41 +4,69 @@ edition: 1
 agenda:
   -
     time: "5:30"
-    name: "Why Geek Night?"
+    title: "Why Geek Night?"
   -
     time: "5:45"
-    name: "Realtime Analytics using R"
+    title: "Realtime Analytics using R"
     speaker: "Bharani Subramanian"
     profile: "mailto:bharanis@thoughtworks.com"
     image: "bharani.jpg"
   -
     time: "6:15"
-    name: "Visualizing tournament scores using D3JS and underscore"
+    title: "Visualizing tournament scores using D3JS and underscore"
     speaker: "Subhas Dandapani (RDX)"
     profile: "//facebook.com/rdx.subhas"
     image: "rdx.jpg"
+    resources:
+      -
+        title: "Demo"
+        url: "//rdsubhas.github.io/ppl"
   -
     time: "6:45"
-    name: "IntelliSense for your Intimidating Data"
+    title: "IntelliSense for your Intimidating Data"
     speaker: "Tamilvendan Sembiyan"
     profile: "//twitter.com/tamizhvendan"
     image: "tamizhvendan.jpg"
+    resources:
+      -
+        title: "Slides"
+        url: "http://t.co/5YLa3KfStS"
+      -
+        title: "Code"
+        url: "http://t.co/qsGllcvrxq"
   -
     time: "7:15"
-    name: Break
+    title: Break
   -
     time: "7:30"
-    name: "Building a Durable object"
+    title: "Building a Durable object"
     speaker: "Sivasubramanian V"
+    profile: "mailto:vsiva@thoughtworks.com"
+    image: "vsiva.jpg"
+    resources:
+      -
+        title: "Slides"
+        url: "http://bit.ly/11lbijY"
   -
     time: "8:00"
-    name: "Fast Graphics using C"
+    title: "Fast Graphics using C"
     speaker: "Ashok Gowtham"
+    profile: "mailto:ashokgowtham123@gmail.com"
+    resources:
+      -
+        title: "GLSL Sandbox"
+        url: "http://glsl.heroku.com/"
   -
     time: "8:30"
-    name: "Search engine implementation - beyond simple text match"
+    title: "Search engine implementation - beyond simple text match"
     speaker: "Srikanth Venugopalan"
+    profile: "mailto:srikanth.ddit@gmail.com"
+    image: "sriv.jpg"
+    resources:
+      -
+        title: "Slides"
+        url: "http://slid.es/steam/search-engine/"
   -
     time: "9:00"
-    name: "Networking &amp; Dinner"
+    title: "Networking &amp; Dinner"
 ---
