Better subtitles for participate/talk

--- a/index.html
+++ b/index.html
@@ -65,18 +65,16 @@
 
         <div class="row actions">
             <div class="large-5 columns">
-                <p>register to</p>
                 <h4><a href="https://docs.google.com/forms/d/1CZHZHbaKp74ZjHm-3YnTlyiiC6VaW-oS8V4idaliSQg/viewform" id="participate" target="_blank" rel="nofollow">Participate</a></h4>
-                <p><small>&bull; this is an open forum, no premium attached</small></p>
+                <p>to learn exciting new stuff</p>
             </div>
             <div class="large-2 columns">
                 <hr class="show-for-small" />
-                <h5 class="hide-for-small"><br />&laquo; or &raquo;</h5>
+                <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
             </div>
             <div class="large-5 columns">
-                <p>submit your</p>
                 <h4><a href="https://docs.google.com/forms/d/1g6CYZrDNnz2-JRSdqO91ml-UBKOi-Se-98dy2YBm0t0/viewform" target="_blank" rel="nofollow">Talk</a></h4>
-                <p><small>&bull; any technical talks are welcome</small></p>
+                <p>to share exciting new stuff</p>
             </div>
         </div>
     </section>
@@ -95,7 +93,7 @@
     <div class="row">
         <div class="large-12 columns">
             <blockquote>
-                <p>Geek Night is a monthly event for geeks in Chennai to meet, share, learn &amp; collaborate. It is organized by a passionate group of programmers and sponsored by ThoughtWorks. To know more, pay a visit to the next Geek Night, or get in touch using any of the above social media.</p>
+                <p>Geek Night is a monthly event to promote sharing of technical knowledge and increase collaboration between geeks in Chennai. It is organized by a passionate group of programmers and sponsored by ThoughtWorks.</p>
 
                 <p><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
 
