TW Landing page links and made them configurable

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,6 +1,8 @@
 ---
 start: 2013-10-29 17:30
 edition: 4
+participate: "http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html"
+talk: "http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html"
 agenda:
   -
     time: "5:45"
