--- a/sep2013.html
+++ b/sep2013.html
@@ -253,11 +253,12 @@
                     <li><a href="http://www.thoughtworks.com" target="_blank">ThoughtWorks</a></li>
                 </ul>
                 <ul class="right">
+                    <li><a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" target="_blank" rel="nofollow">Participate</a></li>
+                    <li><a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow">Talk</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#agenda">Agenda</a></li>
                     
-        <li><a href="#about">About</a></li>
-        <li><a href="#agenda">Agenda</a></li>
-        <li><a href="#archive">Previous Editions</a></li>
-    
+                    <li><a href="#archive">Previous Editions</a></li>
                 </ul>
             </section>
         </nav>
