Better responsive styling

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -36,7 +36,8 @@ agenda:
         url: "//incubator.apache.org/drill/"
   -
     time: "8:30"
-    title: "Lightning Talks"
+    title: "Surprise / Adhoc"
+    subtitle: "(full session, or series of short talks, or pecha kuchas, etc)"
   -
     time: "9:00"
     title: "Networking &amp; Dinner"
