--- a/july2013.html
+++ b/july2013.html
@@ -280,8 +280,18 @@
                     <li><a href="http://www.thoughtworks.com" target="_blank">ThoughtWorks</a></li>
                 </ul>
                 <ul class="right">
-                    <li><a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" target="_blank" rel="nofollow">Participate</a></li>
-                    <li><a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow">Talk</a></li>
+                    <li>
+                        <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" target="_blank" rel="nofollow"
+                           onclick="ga.push(['_trackEvent','Register','Participate','Participate'])">
+                            Participate
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow"
+                           onclick="ga.push(['_trackEvent','Register','Talk','Talk'])">
+                            Talk
+                        </a>
+                    </li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#agenda">Agenda</a></li>
                     
@@ -301,8 +311,9 @@
                 <a rel="nofollow" target="_blank" href="//thoughtworks.com">ThoughtWorks</a><br />
                 Built with
                 <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
-                <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a> &amp;
-                <a rel="nofollow" target="_blank" href="//leafletjs.com">Leaflet</a>
+                <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a>,
+                <a rel="nofollow" target="_blank" href="//leafletjs.com">Leaflet</a> &amp;
+                <a rel="nofollow" target="_blank" href="//nanoc.ws">Nanoc</a>
                 <br />
                 Assets from <a rel="nofollow" target="_blank" href="//openstreetmap.org">OpenStreetMap</a>,
                 <a rel="nofollow" target="_blank" href="//fontello.com">Fontello</a> &amp;
