Fixed analytics tracking, and updated event schedule

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -9,23 +9,12 @@ agenda:
     title: Welcome Note
   -
     time: "6:00"
-    title: "Session 1"
-    speaker: "(not yet decided)"
+    title: "N Different Ways to Sync Data"
+    speaker: "Selvakumar Natesan"
+    profile: "//twitter.com/selvakn"
+    image: "selvakn.jpg"
   -
     time: "6:45"
-    title: 'Creating Parallax websites using Skrollr'
-    speaker: "Subhas Dandapani (RDX)"
-    profile: "//facebook.com/rdx.subhas"
-    image: "rdx.jpg"
-    resources:
-      -
-        title: "Example"
-        url: "//railsgirls.com/chennai"
-  -
-    time: "7:30"
-    title: Break
-  -
-    time: "7:45"
     title: "Demystifying Apache Drill"
     speaker: "Varadharajan M"
     profile: "mailto:varadham@thoughtworks.com"
@@ -35,9 +24,27 @@ agenda:
         title: "Apache Drill"
         url: "//incubator.apache.org/drill/"
   -
+    time: "7:30"
+    title: Break
+  -
+    time: "7:45"
+    title: "Session 3"
+    subtitle: "(speaker being finalized)"
+  -
     time: "8:30"
-    title: "Surprise / Adhoc"
-    subtitle: "(full session, or series of short talks, or pecha kuchas, etc)"
+    title: 'Creating Parallax websites using Skrollr'
+    subtitle: 'Lightning Talk'
+    speaker: "Subhas Dandapani (RDX)"
+    profile: "//facebook.com/rdx.subhas"
+    image: "rdx.jpg"
+    resources:
+      -
+        title: "Example"
+        url: "//railsgirls.com/chennai"
+  -
+    time: "8:45"
+    title: "Lightning Talk"
+    subtitle: "(speaker being finalized)"
   -
     time: "9:00"
     title: "Networking &amp; Dinner"
