--- a/sep2013.html
+++ b/sep2013.html
@@ -255,13 +255,13 @@
                 <ul class="right">
                     <li>
                         <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" target="_blank" rel="nofollow"
-                           onclick="ga.push(['_trackEvent','Register','Participate','Participate'])">
+                           onclick="ga('send', 'event', 'register', 'participate')">
                             Participate
                         </a>
                     </li>
                     <li>
                         <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow"
-                           onclick="ga.push(['_trackEvent','Register','Talk','Talk'])">
+                           onclick="ga('send', 'event', 'register', 'talk')">
                             Talk
                         </a>
                     </li>
