Separate event categories for talk and participate

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="row actions">
             <div class="large-5 columns">
                 <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" id="participate" target="_blank" rel="nofollow"
-                   onclick="ga('send', 'event', 'register', 'participate')">
+                   onclick="ga('send', 'event', 'participate', 'participate')">
                     <h4>Participate</h4>
                 </a>
                 <p>to learn exciting new stuff</p>
@@ -79,7 +79,7 @@
             </div>
             <div class="large-5 columns">
                 <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow"
-                   onclick="ga('send', 'event', 'register', 'talk')">
+                   onclick="ga('send', 'event', 'talk', 'talk')">
                     <h4>Talk</h4>
                 </a>
                 <p>to share exciting new stuff</p>
@@ -335,13 +335,13 @@
                 <ul class="right">
                     <li>
                         <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" target="_blank" rel="nofollow"
-                           onclick="ga('send', 'event', 'register', 'participate')">
+                           onclick="ga('send', 'event', 'participate', 'participate')">
                             Participate
                         </a>
                     </li>
                     <li>
                         <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow"
-                           onclick="ga('send', 'event', 'register', 'talk')">
+                           onclick="ga('send', 'event', 'talk', 'talk')">
                             Talk
                         </a>
                     </li>
