--- a/july2013.html
+++ b/july2013.html
@@ -282,13 +282,13 @@
                 <ul class="right">
                     <li>
                         <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" target="_blank" rel="nofollow"
-                           onclick="ga('send', 'event', 'register', 'participate')">
+                           onclick="ga('send', 'event', 'participate', 'participate')">
                             Participate
                         </a>
                     </li>
                     <li>
                         <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow"
-                           onclick="ga('send', 'event', 'register', 'talk')">
+                           onclick="ga('send', 'event', 'talk', 'talk')">
                             Talk
                         </a>
                     </li>
