--- a/aug2013.html
+++ b/aug2013.html
@@ -215,7 +215,7 @@
             <ul class="grid small-block-grid-2 large-block-grid-4">
                 
                 <li>
-                    <a href="./july2013.html">
+                    <a href="./jul2013.html">
                         <span class="version">
                             1<sup>st</sup> edition
                         </span>
