--- a/sep2013.html
+++ b/sep2013.html
@@ -226,7 +226,7 @@
                 </li>
                 
                 <li>
-                    <a href="./july2013.html">
+                    <a href="./jul2013.html">
                         <span class="version">
                             1<sup>st</sup> edition
                         </span>
