--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="http://www.thoughtworks.com" target="_blank">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1 class="animated bounce">Geek Night Chennai</h1>
+                <h1>Geek Night Chennai</h1>
                 <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
             </div>
         </div>
@@ -67,7 +67,7 @@
 
         <div class="row actions">
             <div class="large-5 columns">
-                <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" target="_blank" rel="nofollow" class="animated"
+                <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html" target="_blank" rel="nofollow"
                    onclick="ga('send', 'event', 'participate', 'participate')">
                     <h4>Participate</h4>
                 </a>
@@ -78,7 +78,7 @@
                 <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
             </div>
             <div class="large-5 columns">
-                <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow" class="animated"
+                <a href="http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html" target="_blank" rel="nofollow"
                    onclick="ga('send', 'event', 'talk', 'talk')">
                     <h4>Talk</h4>
                 </a>
