Added info for october - Session 3

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -28,8 +28,10 @@ agenda:
     title: Break
   -
     time: "7:45"
-    title: "Session 3"
-    subtitle: "(speaker being finalized)"
+    title: "A Primer on MSIL and IL Injection in C#"
+    speaker: "Aravindh S"
+    profile: "mailto:aravindh@thoughtworks.com"
+    image: "aravindhs.jpg"
   -
     time: "8:30"
     title: 'Creating Parallax websites using Skrollr'
