Disabled participation link

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,7 +1,6 @@
 ---
 start: 2013-10-29 17:30
 edition: 4
-participate: "http://info.thoughtworks.com/geek_night_chennai_october_29_attendee_registration.html"
 talk: "http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html"
 agenda:
   -
@@ -45,8 +44,8 @@ agenda:
         url: "//railsgirls.com/chennai"
   -
     time: "8:45"
-    title: "Lightning Talk"
-    subtitle: "(speaker being finalized)"
+    title: "Open Talk"
+    subtitle: "(open to anyone from the audience)"
   -
     time: "9:00"
     title: "Networking &amp; Dinner"
