Added skrollr but not yet implemented, will implement for next active page

--- a/aug2013.html
+++ b/aug2013.html
@@ -286,6 +286,9 @@
 </footer>
 
 
+    <script src="js/skrollr.min.js"></script>
+    <script>var s = skrollr.init()</script>
+
 
     <!-- Google Analytics -->
     <script>
