--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -40,8 +40,14 @@ agenda:
     image: "rdx.jpg"
     resources:
       -
-        title: "Example"
-        url: "//railsgirls.com/chennai"
+        title: "Android KitKat"
+        url: "//kitkat.com/"
+      -
+        title: "Michael2023"
+        url: "//michael2023.com/"
+      -
+        title: "Interactive Resume"
+        url: "//www.rleonardi.com/interactive-resume/"
   -
     time: "8:45"
     title: "Open Talk"
