--- a/sep2013.html
+++ b/sep2013.html
@@ -297,6 +297,9 @@
 </footer>
 
 
+    <script src="js/skrollr.min.js"></script>
+    <script>var s = skrollr.init()</script>
+
 
     <!-- Google Analytics -->
     <script>
