November special animation

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,57 +1,31 @@
 ---
-start: 2013-10-29 17:30
-edition: 4
+start: 2013-11-28 17:30
+edition: 5
 talk: "http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html"
+participate: "javascript:void(0)"
 agenda:
   -
     time: "5:45"
     title: Welcome Note
   -
     time: "6:00"
-    title: "N Different Ways to Sync Data"
-    speaker: "Selvakumar Natesan"
-    profile: "//twitter.com/selvakn"
-    image: "selvakn.jpg"
+    title: "Session 1"
+    subtitle: "(not yet decided)"
   -
     time: "6:45"
-    title: "Demystifying Apache Drill"
-    speaker: "Varadharajan M"
-    profile: "mailto:varadham@thoughtworks.com"
-    image: "varadha.jpg"
-    resources:
-      -
-        title: "Apache Drill"
-        url: "//incubator.apache.org/drill/"
+    title: "Session 2"
+    subtitle: "(not yet decided)"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
-    title: "A Primer on MSIL and IL Injection in C#"
-    speaker: "Aravindh S"
-    profile: "mailto:aravindh@thoughtworks.com"
-    image: "aravindhs.jpg"
+    title: "Session 3"
+    subtitle: "(not yet decided)"
   -
     time: "8:30"
-    title: 'Creating Parallax websites using Skrollr'
-    subtitle: 'Lightning Talk'
-    speaker: "Subhas Dandapani (RDX)"
-    profile: "//facebook.com/rdx.subhas"
-    image: "rdx.jpg"
-    resources:
-      -
-        title: "Android KitKat"
-        url: "//kitkat.com/"
-      -
-        title: "Michael2023"
-        url: "//michael2023.com/"
-      -
-        title: "Interactive Resume"
-        url: "//www.rleonardi.com/interactive-resume/"
-  -
-    time: "8:45"
-    title: "Open Talk"
-    subtitle: "(open to anyone from the audience)"
+    title: "Ad-hoc"
+    subtitle: "(will be any of pecha kucha / 15min / 30min / open floor talks)"
   -
     time: "9:00"
     title: "Networking &amp; Dinner"
